added index.css styling

--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-    <title>Document</title>
+    <title>Responsive Document</title>
+    <link rel="stylesheet" href="./index.css"> 
 </head>
+
 <body>
     <h1>Responsive CSS</h1>
-    <img src="https://images.unsplash.com/photo-1722352565752-2ceba1ea905c?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxmZWF0dXJlZC1waG90b3MtZmVlZHwzfHx8ZW58MHx8fHx8" alt="Two people walking along the beach carrying surfboards" width="400px">
+    <img class="Surfing-image" src="https://images.unsplash.com/photo-1722352565752-2ceba1ea905c?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxmZWF0dXJlZC1waG90b3MtZmVlZHwzfHx8ZW58MHx8fHx8" alt="Two people walking along the beach carrying surfboards">
     <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias veritatis maxime deleniti vitae commodi incidunt deserunt quae aut expedita et. Mollitia repellendus delectus officia quisquam optio minima nulla aliquam provident? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Beatae voluptates dolore saepe tempore enim. In, quibusdam eveniet sit commodi numquam modi exercitationem officiis praesentium aspernatur ut quisquam obcaecati, doloribus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos illum ipsam temporibus. Voluptates earum tenetur itaque ratione quibusdam similique omnis? Aspernatur maiores necessitatibus voluptatibus illum non, sint ea fugiat nostrum!
     </p>
