--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 </head>
 
 <body>
+
+<div class="parent">
+    <div class="child"></div>
+</div>
+
+    
     <h1>Responsive CSS</h1>
     <img class="Surfing-image" src="https://images.unsplash.com/photo-1722352565752-2ceba1ea905c?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxmZWF0dXJlZC1waG90b3MtZmVlZHwzfHx8ZW58MHx8fHx8" alt="Two people walking along the beach carrying surfboards">
     <p>
